--- a/style.css
+++ b/style.css
@@ -44,3 +44,32 @@
   .content {
     padding: 20px;
   }
+
+  .header {
+    text-align: center;
+    padding-bottom: 10px;
+  }
+
+  .mainBody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .content {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .sampleImage {
+    width: 30%;
+    height: auto;
+  }
+
+  .footer {
+    background-color: #63264A;
+    height: 40px;
+  }
