fixed restructuring errors

--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -29,7 +29,9 @@
       </div>
     </div>
 
-    <div class="dropdown"><a href="/careCards.html">Activities</a></div>
+    <div class="dropdown">
+      <a href="..\Activities\careCards.html">Activities</a>
+    </div>
 
     <div class="dropdown">
       <a href="/tips.html">Tips▾</a>
