Adding activities to navbar.

--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -30,7 +30,11 @@
     </div>
 
     <div class="dropdown">
-      <a href="..\Activities\careCards.html">Activities</a>
+      <a href="#">Activities</a>
+      <div class="dropdown-content">
+        <a href="/Activities/careCards.html">Care Cards</a>
+        <a href="/Activities/matchingGame.html">Matching Game</a>
+      </div>
     </div>
 
     <div class="dropdown">
