Adding activities to navbar.

--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -29,7 +29,13 @@
       </div>
     </div>
 
-    <div class="dropdown"><a href="/careCards.html">Activities</a></div>
+    <div class="dropdown">
+      <a href="#">Activities</a>
+      <div class="dropdown-content">
+        <a href="/Activities/careCards.html">Care Cards</a>
+        <a href="/Activities/matchingGame.html">Matching Game</a>
+      </div>
+    </div>
 
     <div class="dropdown">
       <a href="/tips.html">Tips▾</a>
