--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div class="dropdown"><a href="ContactPage/contact.html">Contact</a></div>
+    <div class="dropdown"><a href="/ContactPage/contact.html">Contact</a></div>
 
     <div id="login" class="dropdown">
       <a href="/login.html" id="login-link">Login</a>
