--- a/style.css
+++ b/style.css
@@ -298,5 +298,13 @@
   z-index: 10001;
 }
 
+#categoryContainer {
+  padding: 40px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 25px;
+}
+
+
 
 
