updated dropdown visuals

--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="dropdown">
-      <a href="#">Activities</a>
+      <a href="#">Activities▾</a>
       <div class="dropdown-content">
         <a href="/Activities/careCards.html">Care Cards</a>
         <a href="/Activities/matchingGame.html">Matching Game</a>
@@ -38,12 +38,7 @@
     </div>
 
     <div class="dropdown">
-      <a href="/tips.html">Tips▾</a>
-      <div class="dropdown-content">
-        <a href="#">Watering</a>
-        <a href="#">Sunlight</a>
-        <a href="#">Soil</a>
-      </div>
+      <a href="/tips.html">Tips</a>
     </div>
 
     <div class="dropdown"><a href="/ContactPage/contact.html">Contact</a></div>
