Fixed link for Plants dropdown

--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -22,10 +22,9 @@
     <div class="dropdown">
       <a href="#">Plants▾</a>
       <div class="dropdown-content">
-        <a href="#">Herbs</a>
-        <a href="#">Flowers</a>
-        <a href="#">Vegetables</a>
-        <a href="#">Fruits</a>
+        <a href="/Category/herbs.html">Herbs</a>
+        <a href="/Category/flowers.html">Flowers</a>
+        <a href="/Category/produce.html">Produce</a>
       </div>
     </div>
 
