--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -31,7 +31,7 @@
     <div class="dropdown">
       <a href="#">Activities▾</a>
       <div class="dropdown-content">
-        <a href="/Activities/careCards.html">Care Cards</a>
+        <a href="/Activities/careCards.html">Flashcards</a>
         <a href="/Activities/matchingGame.html">Matching Game</a>
       </div>
     </div>
