added the quiz to the dropdown

--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -33,6 +33,7 @@
       <div class="dropdown-content">
         <a href="/Activities/careCards.html">Flashcards</a>
         <a href="/Activities/matchingGame.html">Matching Game</a>
+        <a href="/Activities/quiz.html">Quiz</a>
       </div>
     </div>
 
