--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -22,6 +22,7 @@
     <div class="dropdown">
       <a href="#">Plants▾</a>
       <div class="dropdown-content">
+        <a href="/Category/allplants.html">All Plants</a>
         <a href="/Category/herbs.html">Herbs</a>
         <a href="/Category/flowers.html">Flowers</a>
         <a href="/Category/produce.html">Produce</a>
