--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
     height: 450px;
     object-fit: cover;
     object-position: 0 30%;
+    margin-bottom: -4px;
   }
 
   /* Dropdown container */
@@ -93,6 +94,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url("Images/floral-background.jpg");
+    background-size: cover;
+    background-color: #cccccc;
   }
 
   .content {
@@ -105,6 +109,11 @@
   .sampleImage {
     width: 30%;
     height: auto;
+    font-size: 20px;
+  }
+
+  .desc {
+    font-size: 20px;
   }
 
   .footer {
