fixed text in main

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@
   }
 
   .content {
-    width: 50%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -114,6 +114,7 @@
 
   .desc {
     font-size: 20px;
+    text-align: center;
   }
 
   .footer {
